style.css
@charset "utf-8";


body {
    font-family: 'Nanum Gothic', sans-serif;
    background-color: #272727;
}

/* Timeline background */

#timeline .timeline-background {
    padding-top: 240px;
    background-image: url(./images/cover.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: bottom;
    text-align: center;
}

.timeline-background .timeline-title {
    color: #ffffff;
}

.timeline-background .timeline-title span {
    font-size: 12px;
}

.timeline-background .timeline-title strong {
    display: block;
    position: relative;
    padding: 10px 0;
    letter-spacing: 10px;
    z-index: 10;
}

.timeline-background .timeline-title strong::before {
    content: '';
    position: absolute;
    top: 50%;
    width: 200px;
    height: 3px;
    transform: translateX(-15px);
    background-color: #21437b;
    z-index: -1;
}


/* Timeline card */

#timeline .timeline-cards {
    width: auto;
    max-width: 700px;
    margin: 0 auto;
    padding: 100px 0;
}

.timeline-cards .card{
    position: relative;
    width: 300px;
    padding: 15px 15px 0;
    border-radius: 10px;
    background-color: #111111;
    color: #fff;
}

.timeline-cards .card:nth-child(even){
    margin-left: auto;
}

.timeline-cards .card .card-title {
    font-size: 50px;
    font-weight: 800;
    color: #1c90ff;
}

.timeline-cards .card .card-version {
    margin-bottom: 15px;
    padding-top: 10px;
    font-size: 12px;
}

.timeline-cards .card:nth-child(odd) .card-title,
.timeline-cards .card:nth-child(odd) .card-version {
    text-align: right;
}

.timeline-cards .card:nth-child(2) .card-version,
.timeline-cards .card:nth-child(4) .card-version {
    padding-left: 10px;
}

.timeline-cards .card .card-list {
    padding: 20px 20px; 
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    background-color: #000000;
}

.timeline-cards .card .card-list li {
    margin-bottom: 5px;
    font-size: 10px;
    color: #484848;
}

.timeline-cards .card .card-list li:last-child {
    margin-bottom: 0;
}

.timeline-cards .card .card-list li::before {
    content: '';
    display: inline-block;
    width: 7px;
    height: 7px;
    margin-right: 10px;
    background-color: #484848;
    border-radius: 50%;
}
    

.timeline-cards .card:nth-child(1)::before {
    content: '';
    position: absolute;
    top: -30%;
    width: 100px;
    height: 100px;
    background-size: cover;
    background-image: url(/images/1.png);
}

.timeline-cards .card:nth-child(2)::before {
    content: '';
    position: absolute;
    top: -30%;
    right: 5%;
    width: 100px;
    height: 100px;
    background-size: cover;
    background-image: url(/images/2.png);
}

.timeline-cards .card:nth-child(3)::before {
    content: '';
    position: absolute;
    top: -30%;
    width: 100px;
    height: 100px;
    background-size: cover;
    background-image: url(/images/3.png);
}

.timeline-cards .card:nth-child(4)::before {
    content: '';
    position: absolute;
    top: -30%;
    right: 5%;
    width: 100px;
    height: 100px;
    background-size: cover;
    background-image: url(/images/4.png);
}

.timeline-cards .card:nth-child(5)::before {
    content: '';
    position: absolute;
    top: -30%;
    width: 100px;
    height: 100px;
    background-size: cover;
    background-image: url(/images/5.png);
}

.timeline-cards .card:nth-child(6)::before {
    content: '';
    position: absolute;
    top: -30%;
    right: 5%;
    width: 100px;
    height: 100px;
    background-size: cover;
    background-image: url(/images/6.png);
}

.timeline-cards .card:nth-child(7)::before {
    content: '';
    position: absolute;
    top: -30%;
    width: 100px;
    height: 100px;
    background-size: cover;
    background-image: url(/images/7.png);
}

.timeline-cards .card:nth-child(8)::before {
    content: '';
    position: absolute;
    top: -20%;
    right: 5%;
    width: 100px;
    height: 100px;
    background-size: cover;
    background-image: url(/images/cs.png);
}

.timeline-cards .card:nth-child(9)::before {
    content: '';
    position: absolute;
    top: -20%;
    width: 100px;
    height: 100px;
    background-size: cover;
    background-image: url(/images/cs2.png);
}

/* Timeline center bar */

.timeline-cards {
    position: relative;
}


.timeline-cards .center-line {
    position: absolute;
    top: 0;
    left: 50%;
    width: 5px;
    height: 100%;
    margin-top: 185px;
    background-color: #1c90ff;
}

.timeline-cards .center-dot {
    position: absolute;
    left: -5px;
    width: 15px;
    height: 15px;
    border-radius: 50px;
    border: 3px solid #1c90ff;
    background-color: #222222;
}

.timeline-cards .center-dot:nth-child(1) {
    top: -12px;
} 

.timeline-cards .center-dot:nth-child(2) {
    top: 146px;
}

.timeline-cards .center-dot:nth-child(3) {
    top: 317px;
} 


.timeline-cards .center-dot:nth-child(4) {
    top: 490px;
}


.timeline-cards .center-dot:nth-child(5) {
    top: 661px;
}


.timeline-cards .center-dot:nth-child(6) {
    top: 848px;
}


.timeline-cards .center-dot:nth-child(7) {
    top: 1048px;
}


.timeline-cards .center-dot:nth-child(8) {
    top: 1235px;
}


.timeline-cards .center-dot:nth-child(9) {
    top: 1484px;
} 

@media (max-width: 768px) {
    .timeline-cards .center {
        display: none;
    }

    .timeline-cards .card {
        margin: 0 auto 70px;
    }
}

